# langmix

./: .flake8  LICENSE  README.md  ffmpeg-extractsubs.sh  pyproject.toml  ripsubtitles.sh  setup.py
extractors/: ffmpeg-extractsrt.sh  ffmpeg-extractsubs.sh  mkvextractsrt.sh  ripsubtitles.sh
langmix/: langmix.py
