[project]
name = "langmix"
dynamic = ["version"]
description = "Merge subtitles in different languages"
readme = "README.md"
requires-python = ">=3.8.10"
license = {file = "LICENSE"}
authors = [
    { name = "Eugene Dvoretsky", email = "radioxoma@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Education",
    "Topic :: Multimedia :: Video",
    "Topic :: Text Processing",
]

dependencies = ["pysrt>=1.0.0"]

[project.optional-dependencies]
dev = ["pre-commit==3.1.1"]

[tool.setuptools.dynamic]
version = {attr = "langmix.__version__"}

[project.urls]
Homepage = "https://github.com/radioxoma/langmix"

[project.gui-scripts]
langmix = "langmix.langmix:main"

[tool.setuptools]
packages = ["langmix"]
